# password-manager-

./: .clang-format  .clang-tidy  .config.example  .gitignore  CMakeLists.txt  Encryption.cpp  GlobalConfig.cpp  GlobalConfig.h  LICENSE  MainFunctionality.cpp  README.md  UI.cpp  UI.h  build.sh  debug_encryption.cpp  install-lint-tools.sh  lint.sh  main.cpp  migration_demo.cpp  pas_man.cpp  passman.cpp  shell.nix  tests.cpp
API/: api.cpp  api.h
Crypt/: Encryption.cpp  Encryption.h
DB/: db.cpp
Data/: data.h  test1
Main/: mainUi.cpp
Styles/: UI.cpp
src/: gui_main.cpp  gui_main.h  main.cpp  mainApi.cpp  mainGui.cpp  mainUi.cpp  tui_main.cpp  tui_main.h
src/cli/: TerminalUIManager.cpp  TerminalUIManager.h  cli_UI.h  cli_api.cpp  cli_api.h  cli_ui.cpp
src/config/: GlobalConfig.cpp  GlobalConfig.h  MigrationHelper.cpp  MigrationHelper.h
src/core/: EncryptionParamsBuilder.cpp  EncryptionParamsBuilder.h  UIManager.cpp  UIManager.h  UIManagerFactory.cpp  UIManagerFactory.h  api.cpp  api.h  base64.cpp  base64.h  clipboard.cpp  clipboard.h  credential_data.h  encryption.cpp  encryption.h  fileSys.cpp  fileSys.h  file_system.cpp  file_system.h  json_storage.cpp  json_storage.h  terminal_ui.cpp  terminal_ui.h  ui.cpp  ui.h
src/crypto/: aes_encryption.cpp  aes_encryption.h  bcrypt_encryption.cpp  bcrypt_encryption.h  cipher_context_raii.cpp  cipher_context_raii.h  encryption_factory.cpp  encryption_factory.h  encryption_interface.h  encryption_type.h  lfsr_encryption.cpp  lfsr_encryption.h  pkey_ctx_raii.cpp  pkey_ctx_raii.h  rsa_encryption.cpp  rsa_encryption.h  salted_encryption.h
src/data/: credentials  data.cpp  data.h
src/gui/: CallbackImpl.h  ComponentBase.h  EditCredentialDialog.h  GuiComponent.h  GuiComponents.h  GuiManager.cpp  GuiManager.h  GuiUIManager.cpp  GuiUIManager.h  LayoutSystem.h  ModernComponents.h  UITheme.cpp  UITheme.h  UpdateDialog.cpp  UpdateDialog.h  gui.cpp  gui.h
src/updater/: AppUpdater.cpp  AppUpdater.h
src/utils/: EncryptionUtils.h  backup_utils.cpp  backup_utils.h  error_utils.cpp  error_utils.h  filesystem_utils.cpp  filesystem_utils.h
tests/: base64_test.cpp
